--- a/estilo.css
+++ b/estilo.css
@@ -27,7 +27,9 @@ header {
 .header-content { 
   display: flex; 
   justify-content: space-between; 
-  align-items: center; 
+  align-items: center;
+  flex-direction: row;
+  padding: 10px 20px;
 }
 
 nav ul {
@@ -227,3 +229,4 @@ a:hover {
     margin: 5px 0;
   }
 }
+
