--- a/estilo.css
+++ b/estilo.css
@@ -226,14 +226,16 @@ a:hover {
     font-size: 1.2rem;
   }
 
-  nav ul {
-    width: 100%; 
-    right: 0;
-    left: 0;
-    top: 70px;
-  }
+ nav ul {
+   width: 220px; 
+   right: 20px;   
+   left: auto;   
+   top: 70px;
+ }
+
 
   nav li {
     margin: 5px 0;
   }
 }
+
