--- a/estilo.css
+++ b/estilo.css
@@ -233,7 +233,7 @@ a:hover {
     top: 70px;
     right: 15px;
     width: 200px;                /* 🔥 más pequeñito */
-    background: #f9a8d4;         /* color cajita */
+    background: rgb(255, 192, 203);
     border-radius: 12px;
     padding: 10px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.25);
@@ -253,3 +253,4 @@ a:hover {
     padding: 8px;
   }
 }
+
